feat: 增加设计相关网址 优化样式

--- a/src/pages/Nav/NavCardItem/index.less
+++ b/src/pages/Nav/NavCardItem/index.less
@@ -4,13 +4,14 @@
   border-radius: 6px;
   cursor: pointer;
 
-  .ant-space {
-    margin-bottom: 15px;
-  }
-
   .item-title {
     font-size: 16px;
     font-weight: 700;
+  }
+
+  .item-subtitle {
+    font-size: 12px;
+    color: #7e7e7e;
   }
 
   .item-desc {
